--- a/documentation/events/projections/index.html
+++ b/documentation/events/projections/index.html
@@ -44,7 +44,7 @@
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
 		      	<li><a href="/marten/documentation/events/streams" title="Querying Event and Stream Data">Previous</a></li>
-		      	<li><a href="/marten/documentation/precompiling" title="Precompiling Marten Code for Faster Initialization">Next</a></li>
+		      	<li><a href="/marten/documentation/events/projections/async_daemon" title="Async Projections Daemon">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -69,14 +69,14 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten 0.9.2</h3>
+		      	<h3>Marten 1.0-alpha</h3>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
 
 		        </ul>
 
-		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/precompiling">Precompiling Marten Code for Faster Initialization</a></p>
+		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/events/projections/async_daemon">Async Projections Daemon</a></p>
 		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/events/streams">Querying Event and Stream Data</a></p>
 
 		        </ul>
@@ -260,7 +260,7 @@ the aggregation type in the <code>StoreOptions</code> upfront when you build up 
 				        </span>
 				        <span class="pull-right">
 
-				        	<strong>Next: </strong><a href="/marten/documentation/precompiling">Precompiling Marten Code for Faster Initialization</a>
+				        	<strong>Next: </strong><a href="/marten/documentation/events/projections/async_daemon">Async Projections Daemon</a>
 
 				        </span>
 			      	</nav>
