--- a/getting_started/index.html
+++ b/getting_started/index.html
@@ -69,7 +69,7 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten 0.9.2</h3>
+		      	<h3>Marten 1.0-alpha</h3>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
@@ -91,7 +91,6 @@
 			      	<div id="main-pane">
 			      		<!--Title:Getting Started-->
 <!--Url:getting_started-->
-<div class="alert alert-info">As of v0.6, Marten only targets .Net 4.6. CoreCLR support <i>should</i> follow in the first quarter of 2016</div>
 <p>First, go get the Marten library from Nuget:</p>
 <pre>
 PM> Install-Package Marten
@@ -100,18 +99,58 @@ PM> Install-Package Marten
 <pre>
 paket add nuget Marten
 </pre>
-<p>The next step is to get access to a Postgresql 9.4+ database schema. If you want to let Marten build database schema objects on the fly at development time,
+<p>The next step is to get access to a Postgresql <strong>9.5+</strong> database schema. If you want to let Marten build database schema objects on the fly at development time,
 make sure that your user account has rights to execute <code>CREATE TABLE/FUNCTION</code> statements.</p>
 <p>Marten uses the <a href="http://www.npgsql.org">Npgsql</a> library to access Postgresql from .Net, so you'll likely want to read their <a href="http://www.npgsql.org/doc/connection-string-parameters.html">documentation on connection string syntax</a>.</p>
 <h2>Bootstrapping a Document Store</h2>
 <p>To start up Marten in a running application, you need to create a single <code>IDocumentStore</code> object. The quickest way is to start with
 all the default behavior and a connection string:</p>
-<p class="bg-warning" style="padding:10px"><b>Missing code sample &#39;start_a_store&#39;</b><small> -- Wait for ST to catch up reading samples or CTRL+SHIFT+R to force refresh</small></p>
+<pre><code class="language-csharp">
+    var store = DocumentStore
+        .For(&quot;host=localhost;database=marten_test;password=mypassword;username=someuser&quot;);
+</code></pre>
 <p>Now, for your first document type, let's represent the users in our system:</p>
-<p class="bg-warning" style="padding:10px"><b>Missing code sample &#39;user_document&#39;</b><small> -- Wait for ST to catch up reading samples or CTRL+SHIFT+R to force refresh</small></p>
-<p><em>For more information on document id's, see <a href="/marten/documentation/documents/document_ids">Document Id's</a>.</em></p>
+<pre><code class="language-csharp">
+    public class User
+    {
+        public Guid Id { get; set; }
+        public string FirstName { get; set; }
+        public string LastName { get; set; }
+        public bool Internal { get; set; }
+        public string UserName { get; set; }
+    }
+</code></pre>
+<p><em>For more information on document id's, see <a href="/marten/documentation/documents/identity">Document Identity</a>.</em></p>
 <p>And now that we've got a Postgresql schema and an <code>IDocumentStore</code>, let's start persisting and loading user documents:</p>
-<p class="bg-warning" style="padding:10px"><b>Missing code sample &#39;opening_sessions&#39;</b><small> -- Wait for ST to catch up reading samples or CTRL+SHIFT+R to force refresh</small></p>
+<pre><code class="language-csharp">
+            // Open a session for querying, loading, and 
+            // updating documents 
+            using (var session = store.LightweightSession())
+            {
+                var user = new User {FirstName = &quot;Han&quot;, LastName = &quot;Solo&quot;};
+                session.Store(user);
+
+                session.SaveChanges();
+            }
+
+            // Open a session for querying, loading, and 
+            // updating documents with a backing &quot;Identity Map&quot;
+            using (var session = store.OpenSession())
+            {
+                var existing = session
+                    .Query&lt;User&gt;()
+                    .Where(x =&gt; x.FirstName == &quot;Han&quot; &amp;&amp; x.LastName == &quot;Solo&quot;)
+                    .Single();
+            }
+
+            // Open a session for querying, loading, and 
+            // updating documents that performas automated
+            // &quot;dirty&quot; checking of previously loaded documents
+            using (var session = store.DirtyTrackedSession())
+            {
+                
+            }
+</code></pre>
 <h2>Integrating Marten with IoC Containers</h2>
 <p>The Marten team has striven to make the library perfectly usable without the usage of an IoC container, but you may still want to
 use an IoC container specifically to manage dependencies and the lifecyle of Marten objects.</p>
