--- a/documentation/schema/schema/index.html
+++ b/documentation/schema/schema/index.html
@@ -90,6 +90,20 @@
 
 			      	<div id="main-pane">
 			      		<!--Title:Configuring the Database Schema-->
+<p>By default, Marten will put all database schema objects into the main <em>public</em> schema. If you want to override this behavior,
+use the <code>StoreOptions.DocumentSchemaName</code> property when configuring your <code>IDocumentStore</code>:</p>
+<pre><code class="language-csharp">
+            StoreOptions(_ =&gt;
+            {
+                _.MappingFor(typeof(User)).DatabaseSchemaName = &quot;other&quot;;
+                _.MappingFor(typeof(Issue)).DatabaseSchemaName = &quot;overriden&quot;;
+                _.MappingFor(typeof(Company));
+
+                // this will tell marten to use the default &#39;public&#39; schema name.
+                _.DatabaseSchemaName = Marten.StoreOptions.DefaultDatabaseSchemaName;
+            });
+</code></pre>
+<p>As you can see, you can also choose to configure the schema storage for each document type individually.</p>
 
 
 			      	</div>
