Added the graphics to the website. Closes GH-498

--- a/documentation/layout.htm
+++ b/documentation/layout.htm
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="<[RootUrl]>" class="navbar-brand">Marten</a>
+		      <a href="<[RootUrl]>" class="navbar-brand">Marten <[version]></a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -69,7 +69,8 @@
 		      <!--left-->
 		      
 		      <div class="col-md-3" id="leftCol">
-		      	<h3>Marten <[version]></h3>
+			  
+				<img src="/content/images/emblem.png" width="100%"/>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
