--- a/documentation/splash.htm
+++ b/documentation/splash.htm
@@ -65,8 +65,19 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
+			<img src="/content/images/banner.png" width="80%" align="middle"/>
             <h1 style="color:white">Marten</h1>
             <h3>Postgresql as Document Db &amp; Event Store for .Net Development</h3>
+			
+                    <h2>Polyglot Persistence for .Net Systems using the Rock Solid Postgresql Database</h2>
+                    <p class="lead">
+                        <a href="http://build.fubu-project.org/project.html?projectId=Marten&tab=projectOverview"><img src="https://img.shields.io/teamcity/http/build.fubu-project.org/s/marten_master.svg"></img></a>
+                        <a href="https://www.nuget.org/packages/Marten/"><img src="https://img.shields.io/nuget/v/Marten.svg"></img></a>
+
+
+<a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
+                    </p>
+			
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
             <a href="getting_started" class="btn btn-dark btn-lg">Get started!</a>
@@ -78,14 +89,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Polyglot Persistence for .Net Systems using the Rock Solid Postgresql Database</h2>
-                    <p class="lead">
-                        <a href="http://build.fubu-project.org/project.html?projectId=Marten&tab=projectOverview"><img src="https://img.shields.io/teamcity/http/build.fubu-project.org/s/marten_master.svg"></img></a>
-                        <a href="https://www.nuget.org/packages/Marten/"><img src="https://img.shields.io/nuget/v/Marten.svg"></img></a>
 
-
-<a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
-                    </p>
                 </div>
             </div>
             <!-- /.row -->
