Docs on command line tooling

--- a/documentation/layout.htm
+++ b/documentation/layout.htm
@@ -70,7 +70,7 @@
 		      
 		      <div class="col-md-3" id="leftCol">
 			  
-				<img src="/content/images/emblem.png" width="100%"/>
+				<img src="/content/images/emblem.png" width="80%" align="middle"/>
 		      	<br />
 
 				<ul class="nav nav-stacked affix" id="sidebar">
